src/objects/Payment_Allocation__c.object
<CustomObject>
    <description>Holds the Payment Allocation details which essentially splits the Payment among invoices.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <description>The Invoice against which this Payment is made.</description>
        <inlineHelpText>The Invoice against which this Payment is made.</inlineHelpText>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <formula>Invoice__r.Legal_Entity__c</formula>
        <inlineHelpText>Legal Entity related to the Invoice</inlineHelpText>
        <label>Legal Entity (Invoice)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <formula>Payment__r.Payment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Payment Allocations</relationshipLabel>
        <relationshipName>Payment_Allocations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                    <color>#78C953</color>
                    <default>true</default>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#FF0000</color>
                    <label>Cancelled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Allocation</label>
    <nameField>
        <label>Payment Allocation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>